# cameraman-1d

./: CMakeLists.txt  README.md
config/: camera_config.json  default_court_config.json
include/camera/: CameramanModel.hpp  ConfigManager.hpp  KalmanFilter1D.hpp
src/camera/: CameramanModel.cpp  ConfigManager.cpp  KalmanFilter1D.cpp
test/: main.cpp
